--- a/InsertionSort.ipynb
+++ b/InsertionSort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
        "9"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -84,13 +84,13 @@
     }
    ],
    "source": [
-    "InsertionSort(A)\n",
+    "InsertionSort_Increasing_Order(A)\n",
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -151,9 +151,18 @@
     }
    ],
    "source": [
-    "InsertionSort_Down(B)\n",
+    "InsertionSort_Decreasing_Order(B)\n",
     "print(B)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
